@@ -23,6 +23,7 @@ Changelog
 [S] = Security fix (issues that are related to security)
 *********************************************
 
+2010-09-16 [B] Fixed registration process if both email verification and admin activation enabled (thread ID 67095) {eenemeenemuu}
 2010-09-13 [M] Increased version count from cpg1.5.9 to cpg1.6.01 {GauGau}
 2010-09-12 [B] Fixed display of unprocessed bbcode markup in ecard display {Nibbler}
 2010-09-10 [O] Optimized picture resizing and watermarking procedure {eenemeenemuu}
